feat: Enhance booking automation with new features and improvements
- Added `nodriver` dependency for undetectable Chrome to bypass Cloudflare.
- Introduced `pandas` for improved data handling.
- Updated `run_booking.py` to handle cookie overlays more effectively with JavaScript fallbacks.
- Implemented a new function `_nuke_cookie_overlay` to force-remove cookie consent overlays.
- Enhanced `dismiss_cookie_banner` to ensure overlays are cleared before interaction.
- Created `task_booking.py` for multi-threaded booking tasks, including login and appointment selection.
- Developed `unified_booking.py` for a unified multi-client booking bot, supporting CSV input and various command-line options.
- Improved logging and error handling throughout the booking process.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,12 @@ PyQt6>=6.6.0
 selenium>=4.23.0
 playwright>=1.46.0
 
+# Undetectable Chrome (primary bypass driver)
+nodriver>=0.36
+
+# Data handling
+pandas>=2.0.0
+
 # Image Processing
 opencv-python>=4.8.0
 Pillow>=10.0.0
